@@ -1,0 +1,17 @@
+title: McAfee web gateway: miscellaneous
+agents: snmp
+catalog: app/mcafee
+license: GPL
+distribution: check_mk
+description:
+ This check monitors the clients and open network sockets of McAfee web gateway
+ devices which supports the MCAFEE-MWG MIB.
+
+ No default levels are set. Upper levels for clients and open network sockets
+ are configurable.
+
+item:
+ No item.
+
+inventory:
+ One service is created.
