@@ -1,0 +1,56 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+
+# There are a few different fields in the related MIB:
+# Statistics, HTTP, HTTPs, FTP, Miscellaneous
+# Future extensions: each field one check
+# mcafee_webgateway_http, mcafee_webgateway_https, mcafee_webgateway_ftp
+
+
+def scan_mcafee_webgateway(oid):
+    return 'mcafee web gateway' in oid('.1.3.6.1.2.1.1.1.0').lower()
+
+
+def inventory_mcafee_webgateway_generic(info):
+    return [ (None, {}) ]
+
+
+def check_mcafee_webgateway_generic(params, data):
+    for what, value, paramskey in data:
+        state    = 0
+        infotext = '%s: %s' % (what, value)
+        if paramskey and paramskey in params:
+            warn, crit = params[paramskey]
+
+            if value >= crit:
+                state = 2
+            elif value >= warn:
+                state = 1
+            if state:
+                infotext += ' (warn/crit at %d/%d)' % (warn, crit)
+
+        yield state, infotext
