@@ -1,0 +1,51 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2016             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# tails. You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+
+# -- Miscellaneous
+# .1.3.6.1.4.1.1230.2.7.2.5.2.0 16 --> MCAFEE-MWG-MIB::stClientCount.0
+# .1.3.6.1.4.1.1230.2.7.2.5.3.0 35 --> MCAFEE-MWG-MIB::stConnectedSockets.0
+
+
+def check_mcafee_webgateway_misc(_no_item, params, info):
+    clients, sockets = map(int, info[0])
+    data = [ ("Clients",              clients, "clients"),
+             ("Open network sockets", sockets, "network_sockets")]
+    return check_mcafee_webgateway_generic(params, data)
+
+
+check_info['mcafee_webgateway_misc'] = {
+    'inventory_function'    : inventory_mcafee_webgateway_generic,
+    'check_function'        : check_mcafee_webgateway_misc,
+    'service_description'   : 'Web gateway miscellaneous',
+    'snmp_info'             : ('.1.3.6.1.4.1.1230.2.7.2.5', [
+                                    "2",    # MCAFEE-MWG-MIB::stClientCount
+                                    "3",    # MCAFEE-MWG-MIB::stConnectedSockets
+                              ]),
+    'snmp_scan_function'    : scan_mcafee_webgateway,
+    'includes'              : [ 'mcafee_webgateway.include' ],
+    'group'                 : 'mcafee_web_gateway_misc',
+}
