@@ -158,6 +158,7 @@
     * 3869 ipmi: now IPMI sensors can be ignored by their status texts during discovery
     * 3744 synology_info: Now also displays OS version
     * 3799 agent_netapp: No longer requires the files NaServer/NaElements. Reduced CPU usage by 2/3...
+    * 3872 mcafee_webgateway, mcafee_webgateway_misc: new checks which monitor some statistics of McAfee web gatway devices
     * 3073 FIX: windows agent: relative paths to mrpe scripts are now treated as relative to the agent installation directory...
     * 3061 FIX: mk_jolokia: Fixed debugging of the agent plugin
     * 3074 FIX: windows agent: fixed incorrect values for 32-bit performance counters
